# hello-world-starter-533

./: .env  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
prisma/: schema.prisma
public/: service-worker.js
src/: index.css  main.tsx
src/components/: AlertPanel.tsx  ControlPanel.tsx  DataExport.tsx  DeckGlobe.tsx  EntityDetailSidebar.tsx  EntityTooltip.tsx  ErrorBoundary.tsx  IntelDashboard.tsx  LoadingOverlay.tsx  SearchBar.tsx  SightingPanel.tsx  ToastNotifications.tsx
src/data/: exclusionZones.ts
src/hooks/: useFullscreen.ts  useKeyboardShortcuts.ts
src/integrations/supabase/: client.ts  types.ts
src/lib/: geo.ts
src/pages/: Index.tsx
src/services/analysis/: aiAnalysisEngine.ts
src/services/audit/: auditLogger.ts
src/services/fusion/: fusionEngine.ts  sightingDetection.ts
src/services/osint/: adsbfiService.ts  aircraftService.ts  aprsService.ts  commoditiesService.ts  earthquakeService.ts  forexService.ts  gdacsService.ts  issService.ts  maritimeService.ts  marketService.ts  naturalEventsService.ts  openSkyService.ts  (+4 more)
src/store/: entityStore.ts  globalEventsStore.ts
src/styles/: globals.css
src/types/: entities.ts  events.ts  geojson.d.ts
src/wasm/fusion_engine/: Cargo.toml
src/wasm/fusion_engine/src/: lib.rs
src/workers/: fusionWorker.ts
supabase/: config.toml
supabase/migrations/: 20250913202402_e5abb720-6e8e-449f-988a-664a99a8f3a2.sql
tests/: regression.spec.ts
(+4 files in other folders)
