[package]
name = "fusion_engine"
version = "0.1.0"
edition = "2021"
description = "WASM-compiled entity fusion engine for the OSINT platform"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "s"          # Optimise for binary size
lto = true
